syntax = "proto3";

option java_package = "work.wander.directory.proto.settings";
option java_multiple_files = true;

message ApplicationSettings {
  bool isDeveloperModeEnabled = 1;

  string activeEmployeeDataUrl = 2;
}